# GisOrders

./: .env.example  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_11_21_2252-1dcc4977c420_add_user_table.py  2026_03_01_2301-59e744c05168_enable_postgis.py  2026_03_01_2305-ae5557f98182_add_order_tables.py  2026_06_02_1121-49d058d4937c_add_cascade_delete.py  2026_06_08_2040-19d9442e0bad_add_chat_and_message_tables.py
backend/api/: __init__.py
backend/api/v1/: __init__.py
backend/api/v1/chat/: models.py  routers.py  schemas.py  services.py
backend/api/v1/orders/: models.py  routers.py  schemas.py  services.py
backend/api/v1/users/: models.py  routers.py  schemas.py  services.py
backend/core/: auth.py  config.py  database.py  security.py
